<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            tools:text="@string/score_placeholder"/>

        <TextView
            android:id="@+id/tv_accuracy"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            tools:text="@string/accuracy_placeholder"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_game_time"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            tools:text="@string/game_time_placeholder"/>

        <TextView
            android:id="@+id/tv_game_mode"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            tools:text="@string/game_mode_placeholder"/>

    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_gravity="right|end"
        android:layout_height="wrap_content"
        tools:text="10/10/10"/>

</LinearLayout>