<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fiu.com.skillcourt.ui.new_team.NewTeamFragment">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/team_name_dw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/new_team_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/team_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/team_desc_dw"
        android:layout_below="@id/team_name_dw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/new_team_desc_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_team_description" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/team_desc_dw"
        android:id="@+id/button_save_new_team" />
</RelativeLayout>
